# Electorate-Vanadium-Core

./: .coveragerc  .gitignore  .hgignore  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tox.ini
docs/: index.md  install.md
docs/development/: build-system.md  project-layout.md
src/electos/vanadium/app/: main.py
src/electos/vanadium/app/database/: memory.py
src/electos/vanadium/app/resource/: __init__.py  storage.py
src/electos/vanadium/app/resources/: __init__.py  base.py  storage.py
src/electos/vanadium/app/route/: _test.py  voter_registration.py
src/electos/vanadium/app/routes/: voter_registration.py
src/electos/vanadium/app/storage/: __init__.py  memory.py
src/electos/vanadium/model/: __init__.py  base.py  classes.py  enumerations.py
src/electos/vanadium/models/: __init__.py  base.py  classes.py
src/electos/vanadium/models/nist/vri/: classes.py
src/electos/vanadium/utils/: __init__.py  cases.py  unique_ids.py
test/vanadium/tests/: conftest.py  test_base_model.py  test_memory_datastore.py  test_models.py
test/vanadium/tests/data/nvra/: alice-zed.json  jane-doe.json  minimal.json
test/vanadium/tests/models/: test_base_model.py  test_vri_models.py
test/vanadium/tests/routes/: test_route_root.py  test_route_test.py  test_voter_registration.py
test/vanadium/tests/utils/: test_cases.py
