[build-system]

requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]

name = "electos-vanadium-core"
version = "0.0.2"
description = "Web service for ElectOS voter data warehouse"
authors = ["Ion Y <ion@osetinstitute.org>"]
packages = [
    { include = "electos/vanadium", from = "src" }
]

[tool.poetry.dependencies]

# TODO: Switch to 3.7 if testing shows it's possible.
python = "^3.8"

# Pin to specific versions known to work together
fastapi = "0.68.2"
starlette = "0.14.2"
pydantic = "1.8.2"
uvicorn = { version = "0.15.0", extras = [ "standard" ] }

# TODO: Add database libraries.

[tool.poetry.dev-dependencies]

# Testing
pytest = "~6.2.3"
pytest-mock = "~3.6.0"
coverage = "~5.5"
tox = "~3.24"
# For FastAPI TestClient
requests = "~2.25.1"
# For 'importlib.resources.files'
importlib-resources = "~5.2.2"

# TODO: Turn on later

# Code quality
### black = "~21.9b0"
### isort = "~5.9.0"

# Documentation
mkdocs = "~1.2.2"
# pydoc-markdown = "~3"
### sphinx = "~3.5.0"
